more, no months

--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,96 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2023-07-20 07:19:00 -0400 
+%% Created for Pete Su at 2023-07-21 07:30:28 -0400
 
 
-%% Saved with string encoding Unicode (UTF-8) 
+%% Saved with string encoding Unicode (UTF-8)
 
 
+
+@book{DeAngelis2018,
+	author = {Alessandro De Angelis and M{\'{a}}rio Pimenta},
+	date-added = {2023-07-21 07:29:49 -0400},
+	date-modified = {2023-07-21 07:29:57 -0400},
+	doi = {10.1007/978-3-319-78181-5},
+	publisher = {Springer International Publishing},
+	title = {Introduction to Particle and Astroparticle Physics},
+	url = {https://doi.org/10.1007%2F978-3-319-78181-5},
+	year = 2018,
+	bdsk-url-1 = {https://doi.org/10.1007%2F978-3-319-78181-5},
+	bdsk-url-2 = {https://doi.org/10.1007/978-3-319-78181-5}}
+
+@book{Keeton_2014,
+	author = {Charles Keeton},
+	date-added = {2023-07-21 07:29:12 -0400},
+	date-modified = {2023-07-21 07:29:12 -0400},
+	doi = {10.1007/978-1-4614-9236-8},
+	publisher = {Springer New York},
+	title = {Principles of Astrophysics},
+	url = {https://doi.org/10.1007%2F978-1-4614-9236-8},
+	year = 2014,
+	bdsk-url-1 = {https://doi.org/10.1007%2F978-1-4614-9236-8},
+	bdsk-url-2 = {https://doi.org/10.1007/978-1-4614-9236-8}}
+
+@book{Lang_2013,
+	author = {Kenneth R. Lang},
+	date-added = {2023-07-21 07:28:08 -0400},
+	date-modified = {2023-07-21 07:28:08 -0400},
+	doi = {10.1007/978-3-642-35963-7},
+	publisher = {Springer Berlin Heidelberg},
+	title = {Essential Astrophysics},
+	url = {https://doi.org/10.1007%2F978-3-642-35963-7},
+	year = 2013,
+	bdsk-url-1 = {https://doi.org/10.1007%2F978-3-642-35963-7},
+	bdsk-url-2 = {https://doi.org/10.1007/978-3-642-35963-7}}
+
+@book{Thronson2009,
+	date-added = {2023-07-21 07:27:20 -0400},
+	date-modified = {2023-07-21 07:27:28 -0400},
+	doi = {10.1007/978-1-4020-9457-6},
+	editor = {Harley A. Thronson and Massimo Stiavelli and Alexander Tielens},
+	publisher = {Springer Netherlands},
+	title = {Astrophysics in the Next Decade},
+	url = {https://doi.org/10.1007%2F978-1-4020-9457-6},
+	year = 2009,
+	bdsk-url-1 = {https://doi.org/10.1007%2F978-1-4020-9457-6},
+	bdsk-url-2 = {https://doi.org/10.1007/978-1-4020-9457-6}}
+
+@book{Wilson2013,
+	author = {Thomas L. Wilson and Kristen Rohlfs and Susanne H{\"u}ttemeister},
+	date-added = {2023-07-21 07:26:12 -0400},
+	date-modified = {2023-07-21 07:26:29 -0400},
+	doi = {10.1007/978-3-642-39950-3},
+	publisher = {Springer Berlin Heidelberg},
+	title = {Tools of Radio Astronomy},
+	url = {https://doi.org/10.1007%2F978-3-642-39950-3},
+	year = 2013,
+	bdsk-url-1 = {https://doi.org/10.1007%2F978-3-642-39950-3},
+	bdsk-url-2 = {https://doi.org/10.1007/978-3-642-39950-3}}
+
+@book{Wilson2009tools,
+	author = {Wilson, Thomas L and Rohlfs, Kristen and H{\"u}ttemeister, Susanne},
+	date-added = {2023-07-21 07:25:19 -0400},
+	date-modified = {2023-07-21 07:26:17 -0400},
+	publisher = {Springer},
+	title = {Tools of radio astronomy},
+	year = {2009}}
+
+@article{Kasen2017,
+	author = {Daniel Kasen and Brian Metzger and Jennifer Barnes and Eliot Quataert and Enrico Ramirez-Ruiz},
+	date-added = {2023-07-21 07:23:32 -0400},
+	date-modified = {2023-07-21 07:24:20 -0400},
+	doi = {10.1038/nature24453},
+	journal = {Nature},
+	note = {\href{https://arxiv.org/abs/1710.05463}{arxiv:1710.05463}},
+	number = {7678},
+	pages = {80--84},
+	publisher = {Springer Science and Business Media {LLC}},
+	title = {Origin of the heavy elements in binary neutron-star mergers from a gravitational-wave event},
+	url = {https://doi.org/10.1038/nature24453},
+	volume = {551},
+	year = {2017},
+	bdsk-url-1 = {https://doi.org/10.1038/nature24453}}
 
 @book{VanDalen1994,
 	author = {Van Dalen, Dirk},
@@ -482,7 +566,6 @@
 	eprint = {1401.5656},
 	journal = {arXiv e-prints},
 	keywords = {Mathematics - Category Theory, Mathematics - Algebraic Geometry, Mathematics - Algebraic Topology},
-	month = jan,
 	note = {\href{https://arxiv.org/abs/1401.5656}{arxiv:1401.5656}},
 	primaryclass = {math.CT},
 	title = {{Yoneda lemma for complete Segal spaces}},
@@ -594,7 +677,6 @@
 	date-added = {2023-07-17 07:15:34 -0400},
 	date-modified = {2023-07-17 07:18:31 -0400},
 	doi = {10.1201/9781351251624-13},
-	month = {Jan},
 	note = {\href{https://arxiv.org/abs/1907.02904}{arxiv:1907.02904}},
 	pages = {487--548},
 	publisher = {Chapman and Hall/{CRC}},
@@ -610,7 +692,6 @@
 	date-modified = {2023-07-17 07:13:16 -0400},
 	doi = {10.1216/rmj-2012-42-2-353},
 	journal = {Rocky Mountain J. Math.},
-	month = {Apr},
 	note = {\href{https://arxiv.org/abs/0809.4221}{arxiv:0809.4221}},
 	number = {2},
 	pages = {353-423},
@@ -799,7 +880,6 @@
 	date-added = {2023-07-16 07:57:27 -0400},
 	date-modified = {2023-07-16 07:57:27 -0400},
 	doi = {10.1017/9781316181874},
-	month = mar,
 	publisher = {Cambridge University Press},
 	title = {The Homotopy Theory of ($\infty$, 1)-Categories},
 	url = {https://doi.org/10.1017/9781316181874},
@@ -909,7 +989,6 @@
 	date-modified = {2023-07-15 16:33:51 -0400},
 	doi = {10.4204/eptcs.323.8},
 	journal = {Electronic Proceedings in Theoretical Computer Science},
-	month = sep,
 	note = {\href{https://arxiv.org/abs/1905.05636}{arxiv:1905.05636}},
 	pages = {106--135},
 	publisher = {Open Publishing Association},
@@ -1135,7 +1214,6 @@
 	doi = {10.1103/RevModPhys.73.663},
 	issue = {3},
 	journal = {Rev. Mod. Phys.},
-	month = {Sep},
 	note = {\href{https://arxiv.org/abs/hep-ph/0012061}{arxiv:hep-ph/0012061}},
 	numpages = {0},
 	pages = {663--680},
@@ -1315,7 +1393,6 @@
 	eprint = {1408.0054},
 	journal = {arXiv e-prints},
 	keywords = {Mathematical Physics, Computer Science - Logic in Computer Science, Mathematics - Category Theory},
-	month = {Jul},
 	note = {\href{https://arxiv.org/abs/1408.0054v1}{arxiv:1408.0054v1}},
 	primaryclass = {math-ph},
 	title = {{Quantum Gauge Field Theory in Cohesive Homotopy Type Theory}},
@@ -1798,7 +1875,6 @@
 	doi = {10.1007/s10701-007-9104-1},
 	issn = {1572-9516},
 	journal = {Foundations of Physics},
-	month = {Mar},
 	note = {\href{https://arxiv.org/abs/quant-ph/0607057}{https://arxiv:quant-ph/0607057}},
 	number = {3},
 	pages = {311--340},
@@ -1820,7 +1896,6 @@
 	eprint = {quant-ph/0401052},
 	journal = {Phys. Rev. A},
 	keywords = {03.65.Ta, 03.67.-a, Foundations of quantum mechanics, measurement theory, Quantum information, Quantum Physics},
-	month = {Mar},
 	note = {\href{https://arxiv.org/abs/quant-ph/0401052}{arxiv:quant-ph/0401052}},
 	number = {3},
 	pages = {032110},
@@ -1967,7 +2042,6 @@
 	journal = {Mathematical Structures in Computer Science},
 	keywords = {Mathematics--Computer Applications; Homotopy theory},
 	language = {English},
-	month = {02},
 	note = {\href{https://arxiv.org/abs/1406.3219}{arxiv:1406.3219}},
 	number = {2},
 	pages = {241-286},
@@ -1983,7 +2057,6 @@
 	date-modified = {2019-09-05 07:28:13 -0400},
 	doi = {10.2307/1970725},
 	journal = {The Annals of Mathematics},
-	month = sep,
 	number = {2},
 	pages = {205},
 	publisher = {{JSTOR}},
@@ -1999,7 +2072,6 @@
 	date-modified = {2019-09-04 07:35:40 -0400},
 	doi = {10.1090/bull/1616},
 	journal = {Bulletin of the American Mathematical Society},
-	month = mar,
 	note = {\href{https://arxiv.org/abs/1711.01477v3}{arxiv:1711.01477v3}},
 	number = {4},
 	pages = {427--450},
@@ -2039,7 +2111,6 @@
 	eprint = {1010.1810},
 	journal = {arXiv e-prints},
 	keywords = {Mathematics - Category Theory, Mathematics - Logic, 18G55},
-	month = oct,
 	note = {\href{https://arxiv.org/abs/1010.1810}{arxiv:1010.1810}},
 	primaryclass = {math.CT},
 	title = {{Type theory and homotopy}},
@@ -2051,7 +2122,6 @@
 	date-modified = {2023-07-18 09:13:53 -0400},
 	doi = {10.1017/s0305004108001783},
 	journal = {Mathematical Proceedings of the Cambridge Philosophical Society},
-	month = jan,
 	note = {\href{https://arxiv.org/abs/0709.0248}{arxiv:0709.0248}},
 	number = {1},
 	pages = {45--55},
@@ -2080,7 +2150,6 @@
 	doi = {10.1007/s10699-019-09608-5},
 	issn = {1572-8471},
 	journal = {Foundations of Science},
-	month = {May},
 	note = {\href{https://arxiv.org/abs/1908.07936}{arxiv:1908.07936}},
 	title = {{Obliterating Thingness: An Introduction to the ``What'' and the ``So What'' of Quantum Physics}},
 	url = {https://doi.org/10.1007/s10699-019-09608-5},
@@ -2108,7 +2177,6 @@
 	doi = {10.1007/s10699-016-9487-6},
 	issn = {1572-8471},
 	journal = {Foundations of Science},
-	month = {Sep},
 	number = {3},
 	pages = {517--537},
 	title = {Quantum Mechanics in a New Light},
@@ -2123,7 +2191,6 @@
 	date-modified = {2019-08-26 20:46:08 -0400},
 	doi = {10.1142/s0219749909004487},
 	journal = {International Journal of Quantum Information},
-	month = feb,
 	number = {01},
 	pages = {435--458},
 	publisher = {World Scientific Pub Co Pte Lt},
@@ -2139,7 +2206,6 @@
 	date-modified = {2019-08-26 20:25:13 -0400},
 	doi = {10.1142/s0219749904000195},
 	journal = {International Journal of Quantum Information},
-	month = jun,
 	number = {02},
 	pages = {221--229},
 	publisher = {World Scientific Pub Co Pte Lt},
@@ -2155,7 +2221,6 @@
 	date-modified = {2019-08-24 22:18:42 -0400},
 	doi = {10.1103/physreva.71.052105},
 	journal = {Physical Review A},
-	month = may,
 	note = {\href{https://arxiv.org/abs/quant-ph/0405161v2}{arxiv:quant-ph/0405161v2}},
 	number = {5},
 	publisher = {American Physical Society ({APS})},
@@ -2171,7 +2236,6 @@
 	date-modified = {2019-08-24 11:26:58 -0400},
 	doi = {10.1007/s10701-004-1941-6},
 	journal = {Foundations of Physics},
-	month = feb,
 	note = {\href{https://arxiv.org/abs/quant-ph/0312058}{arxiv:quant-ph/0312058}},
 	number = {2},
 	pages = {197--213},
@@ -2211,7 +2275,6 @@
 	doi = {10.1103/PhysRevA.83.012109},
 	issue = {1},
 	journal = {Phys. Rev. A},
-	month = {Jan},
 	numpages = {12},
 	pages = {012109},
 	publisher = {American Physical Society},
@@ -2228,7 +2291,6 @@
 	date-modified = {2019-08-20 22:14:32 -0400},
 	doi = {10.3390/e19050186},
 	journal = {Entropy},
-	month = {04},
 	pages = {186},
 	title = {A Quantum Description of the Stern--Gerlach Experiment},
 	volume = {19},
@@ -2241,7 +2303,6 @@
 	date-added = {2019-08-20 08:28:10 -0400},
 	date-modified = {2019-08-20 08:28:10 -0400},
 	doi = {10.1007/978-3-319-38987-5_5},
-	month = nov,
 	pages = {95--117},
 	publisher = {Springer International Publishing},
 	title = {On the Quantum Measurement Problem},
@@ -2271,7 +2332,6 @@
 	date-modified = {2019-08-17 17:25:24 -0400},
 	doi = {10.1007/s10701-010-9480-9},
 	journal = {Foundations of Physics},
-	month = jun,
 	note = {\href{https://arxiv.org/abs/1006.0499}{arxiv:1006.0499}},
 	number = {9-10},
 	pages = {1333--1340},
@@ -2306,7 +2366,6 @@
 	doi = {10.1103/RevModPhys.65.803},
 	issue = {3},
 	journal = {Rev. Mod. Phys.},
-	month = {Jul},
 	numpages = {0},
 	pages = {803--815},
 	publisher = {American Physical Society},
@@ -2375,7 +2434,6 @@
 	doi = {10.1007/s00006-016-0731-5},
 	issn = {1661-4909},
 	journal = {Advances in Applied Clifford Algebras},
-	month = {Jun},
 	number = {2},
 	pages = {1203--1232},
 	title = {Doing Euclidean Plane Geometry Using Projective Geometric Algebra},
@@ -2410,7 +2468,6 @@
 	doi = {10.1007/BF01649590},
 	issn = {1432-0916},
 	journal = {Communications in Mathematical Physics},
-	month = {Mar},
 	number = {1},
 	pages = {57--79},
 	title = {{On the vacuum state in quantum field theory. II}},
@@ -2428,7 +2485,6 @@
 	doi = {10.1007/BF02750157},
 	issn = {1827-6121},
 	journal = {Il Nuovo Cimento (1955-1965)},
-	month = {Jul},
 	number = {1},
 	pages = {148--162},
 	title = {{The Vacuum State in Quantum Field Theory}},
@@ -2445,7 +2501,6 @@
 	date-modified = {2019-08-06 08:07:36 -0400},
 	doi = {10.1103/PhysRev.98.812},
 	journal = {Physical Review},
-	month = may,
 	pages = {812-837},
 	title = {{Configuration Space Methods in Relativistic Quantum Field Theory. I}},
 	volume = 98,
@@ -2459,7 +2514,6 @@
 	doi = {10.1215/ijm/1255632508},
 	fjournal = {Illinois Journal of Mathematics},
 	journal = {Illinois J. Math.},
-	month = {Sept.},
 	number = {3},
 	pages = {500--523},
 	publisher = {Duke University Press},
@@ -2514,7 +2568,6 @@
 	doi = {10.1007/s10670-005-5814-y},
 	issn = {1572-8420},
 	journal = {Erkenntnis},
-	month = {Jun},
 	number = {3},
 	pages = {305},
 	title = {{Haag's Theorem and its Implications for the Foundations of Quantum Field Theory}},
@@ -2542,7 +2595,6 @@
 	date-modified = {2019-07-14 16:08:06 -0400},
 	doi = {10.1088/1367-2630/18/5/053013},
 	journal = {New Journal of Physics},
-	month = may,
 	note = {\href{https://arxiv.org/abs/1604.01471}{arxiv:1604.01471}},
 	number = {5},
 	pages = {053013},
@@ -2579,7 +2631,6 @@
 	doi = {10.1140/epjp/i2012-12012-4},
 	issn = {2190-5444},
 	journal = {The European Physical Journal Plus},
-	month = {Jan},
 	note = {\href{https://arxiv.org/abs/1112.1507}{arxiv:1112.1507}},
 	number = {1},
 	pages = {12},
@@ -2690,7 +2741,6 @@
 	eprint = {http://oup.prod.sis.lan/bjps/article-pdf/65/4/773/6860948/axt019.pdf},
 	issn = {0007-0882},
 	journal = {The British Journal for the Philosophy of Science},
-	month = {09},
 	number = {4},
 	pages = {773-796},
 	title = {{The Ontology of Bohmian Mechanics}},
@@ -2706,7 +2756,6 @@
 	doi = {10.1103/PhysRevA.39.2277},
 	issue = {5},
 	journal = {Phys. Rev. A},
-	month = {Mar},
 	numpages = {0},
 	pages = {2277--2289},
 	publisher = {American Physical Society},
@@ -2724,7 +2773,6 @@
 	date-modified = {2019-07-06 08:22:45 -0400},
 	doi = {10.1088/0143-0807/33/4/805},
 	journal = {European Journal of Physics},
-	month = {Apr},
 	note = {\href{https://arxiv.org/abs/1204.2016}{arxiv:1204.2016}},
 	number = {4},
 	pages = {805--822},
@@ -2805,7 +2853,6 @@
 	doi = {10.1007/BF01608499},
 	issn = {1432-0916},
 	journal = {Communications in Mathematical Physics},
-	month = {Jun},
 	number = {2},
 	pages = {119--130},
 	title = {On the generators of quantum dynamical semigroups},
@@ -2849,7 +2896,6 @@
 	doi = {10.1103/PhysRevA.56.5065},
 	issue = {6},
 	journal = {Phys. Rev. A},
-	month = {Dec},
 	numpages = {0},
 	pages = {5065--5099},
 	publisher = {American Physical Society},
@@ -2867,7 +2913,6 @@
 	doi = {10.1103/PhysRevLett.57.1699},
 	issn = {0031-9007},
 	journal = {Physical Review Letters},
-	month = {oct},
 	number = {14},
 	pages = {1699--1702},
 	publisher = {American Physical Society},
@@ -2898,11 +2943,10 @@
 	abstract = {Confining light in open structures is a long-sought goal in nanophotonics and cavity quantum electrodynamics. Embedded eigenstates provide infinite lifetime despite the presence of available leakage channels, but in linear time-invariant systems they cannot be excited from the outside, due to reciprocity. Here, we investigate how atomic nonlinearities may support single-photon embedded eigenstates, which can be populated by a multi-photon excitation followed by internal relaxation. We calculate the system dynamics and show that photon trapping, as well as the reverse release process, can be achieved with arbitrarily high efficiencies. We also discuss the impact of loss, and a path toward the experimental verification of these concepts.},
 	author = {Michele Cotrufo and Andrea Al\`{u}},
 	date-added = {2019-06-28 19:51:21 -0400},
-	date-modified = {2019-06-28 19:52:45 -0400},
+	date-modified = {2023-07-21 07:30:28 -0400},
 	doi = {10.1364/OPTICA.6.000799},
 	journal = {Optica},
 	keywords = {Cavity quantum electrodynamics; Phase conjugation; Photon polarization; Photonic bandgap materials; Photonic crystal waveguides; Photons},
-	month = {Jun},
 	note = {\href{https://doi.org/10.1364/OPTICA.6.000799}{10.1364/OPTICA.6.000799}},
 	number = {6},
 	pages = {799--804},
@@ -2970,7 +3014,6 @@
 	date-modified = {2019-06-13 07:38:41 -0400},
 	doi = {10.1090/s0002-9904-1970-12492-2},
 	journal = {Bulletin of the American Mathematical Society},
-	month = mar,
 	number = {2},
 	pages = {407--411},
 	publisher = {American Mathematical Society ({AMS})},
@@ -2987,7 +3030,6 @@
 	doi = {10.1103/PhysRev.176.1945},
 	issue = {5},
 	journal = {Phys. Rev.},
-	month = {Dec},
 	numpages = {0},
 	pages = {1945--1951},
 	publisher = {American Physical Society},
@@ -3006,7 +3048,6 @@
 	doi = {10.1007/BF02392335},
 	issn = {1871-2509},
 	journal = {Acta Mathematica},
-	month = {Dec},
 	number = {1},
 	pages = {203--267},
 	title = {{The $\lambda$($\phi$4)2 quantum field theory without cutoffs. III. The physical vacuum}},
@@ -3036,7 +3077,6 @@
 	date-modified = {2019-06-13 07:38:51 -0400},
 	doi = {10.2307/1970582},
 	journal = {The Annals of Mathematics},
-	month = mar,
 	number = {2},
 	pages = {362},
 	publisher = {{JSTOR}},
@@ -3089,7 +3129,6 @@
 	date-modified = {2019-06-05 20:02:43 -0400},
 	doi = {10.1038/s41586-019-1287-z},
 	journal = {Nature},
-	month = jun,
 	note = {\href{https://arxiv.org/abs/1803.00545v2}{1803.00545v2}},
 	publisher = {Springer Science and Business Media {LLC}},
 	title = {To catch and reverse a quantum jump mid-flight},
@@ -3150,7 +3189,6 @@
 	issn = {2333-9403},
 	journal = {IEEE Transactions on Computational Imaging},
 	keywords = {Telescopes;Frequency measurement;Interferometry;Extraterrestrial measurements;Image reconstruction;Astronomy;Image resolution;Radio astronomy;High-resolution imaging;Radio astronomy;radio interferometry;image reconstruction;high-resolution imaging},
-	month = {Dec},
 	note = {\href{https://arxiv.org/abs/1711.01357}{arxiv:1711.01357}},
 	number = {4},
 	pages = {512-527},
@@ -3285,7 +3323,6 @@
 	date-added = {2019-03-15 11:59:06 -0400},
 	date-modified = {2019-03-15 11:59:43 -0400},
 	doi = {10.1109/icqnm.2009.12},
-	month = {Feb},
 	note = {\href{https://arxiv.org/abs/0902.3005v1}{arxiv:0902.3005v1}},
 	publisher = {{IEEE}},
 	title = {Does Quantum Mechanics Need Interpretation?},
@@ -3350,7 +3387,6 @@
 	doi = {10.1007/BF02059126},
 	issn = {1572-9516},
 	journal = {Foundations of Physics},
-	month = {May},
 	note = {\href{https://arxiv.org/abs/hep-th/9408020}{arxiv:hep-th/9408020}},
 	number = {5},
 	pages = {743--762},
@@ -3432,7 +3468,6 @@
 	date-added = {2019-03-10 08:34:26 -0400},
 	date-modified = {2019-03-10 08:36:07 -0400},
 	doi = {10.1093/acprof:oso/9780199560561.003.0019},
-	month = {June},
 	note = {\href{https://arxiv.org/abs/0811.0810}{arxiv:0811.0810}},
 	pages = {476--509},
 	publisher = {Oxford University Press},
@@ -3452,7 +3487,6 @@
 	eprint = {0811.0810},
 	journal = {arXiv e-prints},
 	keywords = {Quantum Physics, General Relativity and Quantum Cosmology, High Energy Physics - Theory},
-	month = {Nov},
 	note = {\href{https://arxiv.org/abs/0811.0810}{arxiv:0811.0810}},
 	primaryclass = {quant-ph},
 	title = {{De Broglie-Bohm Pilot-Wave Theory: Many Worlds in Denial?}},
@@ -3502,10 +3536,9 @@
 @article{Duncan2008,
 	author = {Anthony Duncan and Michel Janssen},
 	date-added = {2019-03-10 08:15:48 -0400},
-	date-modified = {2019-03-10 08:17:17 -0400},
+	date-modified = {2023-07-21 07:30:17 -0400},
 	doi = {10.1016/j.shpsb.2008.04.005},
 	journal = {Studies in History and Philosophy of Science Part B: Studies in History and Philosophy of Modern Physics},
-	month = {Sep},
 	note = {\href{https://arxiv.org/abs/0709.3812}{https://arxiv.org/abs/0709.3812}},
 	number = {3},
 	pages = {634--666},
@@ -3540,7 +3573,6 @@
 	date-modified = {2019-03-09 15:35:36 -0500},
 	doi = {10.1080/02698599808573600},
 	journal = {International Studies in the Philosophy of Science},
-	month = {Oct},
 	note = {\href{https://arxiv.org/abs/quant-ph/9609006}{arxiv:9609006}},
 	number = {3},
 	pages = {245--261},
@@ -3589,7 +3621,6 @@
 	date-modified = {2019-03-09 08:18:26 -0500},
 	doi = {10.1023/b:joss.0000037234.80916.d0},
 	journal = {Journal of Statistical Physics},
-	month = {Aug},
 	note = {\href{https://arxiv.org/abs/quant-ph/0308039v1}{arxiv:0308039v1}},
 	number = {1-4},
 	pages = {959--1055},
@@ -3604,12 +3635,11 @@
 	abstract = {The quantum formalism is a ``measurement'' formalism-a phenomenological formalism describing certain macroscopic regularities. We argue that it can be regarded, and best be understood, as arising from Bohmian mechanics, which is what emerges from Schr{\"o}dinger's equation for a system of particles when we merely insist that ``particles'' means particles. While distinctly non-Newtonian, Bohmian mechanics is a fully deterministic theory of particles in motion, a motion choreographed by the wave function. We find that a Bohmian universe, though deterministic, evolves in such a manner that anappearance of randomness emerges, precisely as described by the quantum formalism and given, for example, by ``$\rho$ = {\textbrokenbar}$\psi${\textbrokenbar}2''. A crucial ingredient in our analysis of the origin of this randomness is the notion of the effective wave function of a subsystem, a notion of interest in its own right and of relevance to any discussion of quantum theory. When the quantum formalism is regarded as arising in this way, the paradoxes and perplexities so often associated with (nonrelativistic) quantum theory simply evaporate.},
 	author = {D{\"u}rr, Detlef and Goldstein, Sheldon and Zangh{\'\i}, Nino},
 	date-added = {2019-03-09 07:36:16 -0500},
-	date-modified = {2019-03-09 07:36:44 -0500},
+	date-modified = {2023-07-21 07:30:08 -0400},
 	day = {01},
 	doi = {10.1007/BF01049004},
 	issn = {1572-9613},
 	journal = {Journal of Statistical Physics},
-	month = {Jun},
 	note = {\href{https://arxiv.org/abs/quant-ph/0308039v1}{arxiv:0308039v1}},
 	number = {5},
 	pages = {843--907},
@@ -3627,7 +3657,6 @@
 	date-modified = {2019-03-07 18:52:38 -0500},
 	doi = {10.1016/0370-1573(87)90024-X},
 	journal = {Physics Reports},
-	month = jan,
 	pages = {321-375},
 	title = {{An ontological basis for the quantum theory}},
 	volume = 144,
@@ -3659,7 +3688,6 @@
 	doi = {10.1007/BF00413904},
 	issn = {1573-0964},
 	journal = {Synthese},
-	month = {Apr},
 	note = {\href{https://arxiv.org/abs/quant-ph/9512027v1}{arxiv:9512027v1}},
 	number = {1},
 	pages = {145--165},
@@ -3709,7 +3737,6 @@
 	date-modified = {2019-03-06 21:22:26 -0500},
 	doi = {10.1007/s00220-004-1242-0},
 	journal = {Communications in Mathematical Physics},
-	month = {nov},
 	note = {\href{https://arxiv.org/abs/quant-ph/0303056v3}{arxiv:0303056v3}},
 	number = {1},
 	pages = {129--166},
@@ -3743,7 +3770,6 @@
 	date-modified = {2019-03-06 07:37:18 -0500},
 	doi = {10.12743/quanta.v3i1.22},
 	journal = {Quanta},
-	month = {Nov},
 	note = {\href{https://arxiv.org/abs/1409.1570}{https://arxiv.org/abs/1409.1570}},
 	number = {1},
 	pages = {67},
@@ -3872,7 +3898,6 @@ horizon.},
 	date-modified = {2019-03-03 12:02:11 -0500},
 	doi = {10.1088/1126-6708/2001/05/001},
 	journal = {Journal of High Energy Physics},
-	month = {May},
 	note = {\href{https://arxiv.org/abs/hep-th/0002145}{https://arxiv.org/abs/hep-th/0002145}},
 	number = {05},
 	pages = {001--001},
@@ -3901,7 +3926,6 @@ horizon.},
 	date-added = {2019-03-02 21:16:36 -0500},
 	date-modified = {2019-03-02 21:16:52 -0500},
 	doi = {10.1090/stml/047},
-	month = {March},
 	publisher = {American Mathematical Society},
 	title = {Lectures on Quantum Mechanics for Mathematics Students},
 	url = {https://doi.org/10.1090/stml/047},
@@ -3926,7 +3950,6 @@ horizon.},
 	doi = {10.1103/PhysRevD.25.942},
 	issue = {4},
 	journal = {Phys. Rev. D},
-	month = {Feb},
 	numpages = {0},
 	pages = {942--958},
 	publisher = {American Physical Society},
@@ -3948,7 +3971,6 @@ horizon.},
 	eprint = {0802.1854},
 	journal = {arXiv e-prints},
 	keywords = {Mathematical Physics, 81T05},
-	month = {Feb},
 	note = {\href{https://arxiv.org/abs/0802.1854}{arxiv:0802.1854}},
 	primaryclass = {math-ph},
 	title = {{Yet More Ado About Nothing: The Remarkable Relativistic Vacuum State}},
@@ -3965,7 +3987,6 @@ horizon.},
 	eprint = {1602.04182},
 	journal = {arXiv e-prints},
 	keywords = {Physics - Physics Education},
-	month = {Feb},
 	note = {\href{https://arxiv.org/abs/1602.04182}{arxiv:1602.04182}},
 	primaryclass = {physics.ed-ph},
 	title = {{Feynman Diagrams for Beginners}},
@@ -3977,7 +3998,6 @@ horizon.},
 	date-modified = {2019-02-26 23:18:32 +0000},
 	doi = {10.1007/s10701-009-9347-0},
 	journal = {Foundations of Physics},
-	month = {jan},
 	note = {\href{https://arxiv.org/abs/0706.2661}{arxiv:abs/0706.2661}},
 	number = {2},
 	pages = {125--157},
@@ -3998,7 +4018,6 @@ horizon.},
 	issn = {0001-0782},
 	issue_date = {Aug. 1967},
 	journal = {{Communications of the ACM}},
-	month = aug,
 	number = {8},
 	numpages = {6},
 	pages = {513--518},
@@ -4076,7 +4095,6 @@ horizon.},
 	eid = {arxiv:1801.06196},
 	eprint = {1801.06196},
 	keywords = {Physics - History and Philosophy of Physics, Quantum Physics},
-	month = {Jan},
 	note = {\href{https://arxiv.org/abs/1801.06196}{arxiv:1801.06196}},
 	primaryclass = {physics.hist-ph},
 	title = {{A Quantum Story}},
@@ -4117,7 +4135,6 @@ horizon.},
 	e-print = {https://arxiv.org/abs/1309.0724v1},
 	issn = {2102-6467},
 	journal = {The European Physical Journal H},
-	month = {Sep},
 	note = {\href{https://arxiv.org/abs/1309.0724v1}{1309.0724v1}},
 	number = {4},
 	pages = {443--470},
@@ -4223,7 +4240,6 @@ horizon.},
 	eprint = {1902.05178},
 	journal = {arXiv e-prints},
 	keywords = {Computer Science - Programming Languages, Computer Science - Cryptography and Security, F.3.2},
-	month = {Feb},
 	note = {\href{https://arxiv.org/abs/1902.05178}{arxiv:1902.05178}},
 	primaryclass = {cs.PL},
 	title = {{Spectre is here to stay: An analysis of side-channels and speculative execution}},
@@ -4240,7 +4256,6 @@ horizon.},
 	eprint = {1902.04738},
 	journal = {arXiv e-prints},
 	keywords = {Computer Science - Programming Languages, Computer Science - Data Structures and Algorithms, Computer Science - Performance},
-	month = {Feb},
 	note = {\href{https://arxiv.org/abs/1902.04738}{arxiv:1902.04738}},
 	primaryclass = {cs.PL},
 	title = {{Mesh: Compacting Memory Management for C/C++ Applications}},
@@ -4304,11 +4319,10 @@ horizon.},
 @article{Coleman1977,
 	author = {Coleman, Sidney},
 	date-added = {2019-02-16 23:23:28 +0000},
-	date-modified = {2019-02-16 23:24:16 +0000},
+	date-modified = {2023-07-21 07:30:22 -0400},
 	doi = {10.1103/PhysRevD.15.2929},
 	issue = {10},
 	journal = {Phys. Rev. D},
-	month = {May},
 	note = {\href{https://link.aps.org/doi/10.1103/PhysRevD.15.2929}{doi/10.1103/PhysRevD.15.2929}},
 	numpages = {0},
 	pages = {2929--2936},
@@ -4347,7 +4361,6 @@ horizon.},
 	doi = {10.1007/JHEP08(2015)114},
 	issn = {1029-8479},
 	journal = {Journal of High Energy Physics},
-	month = {Aug},
 	note = {\href{https://arxiv.org/abs/1503.07331}{1503.07331}},
 	number = {8},
 	pages = {114},
@@ -4421,7 +4434,6 @@ horizon.},
 	doi = {10.1103/RevModPhys.70.101},
 	issue = {1},
 	journal = {Rev. Mod. Phys.},
-	month = {Jan},
 	numpages = {0},
 	pages = {101--144},
 	publisher = {American Physical Society},
@@ -4558,7 +4570,6 @@ horizon.},
 	date-added = {2019-02-10 13:17:38 +0000},
 	date-modified = {2019-02-10 13:18:27 +0000},
 	doi = {10.1090/surv/149},
-	month = {Aug},
 	publisher = {American Mathematical Society},
 	title = {Quantum Field Theory - A Tourist Guide for Mathematicians},
 	url = {https://doi.org/10.1090/surv/149},
@@ -4635,7 +4646,6 @@ horizon.},
 	date-modified = {2019-02-10 03:28:21 +0000},
 	doi = {10.1119/1.13886},
 	journal = {American Journal of Physics},
-	month = {apr},
 	number = {4},
 	pages = {340--343},
 	publisher = {American Association of Physics Teachers ({AAPT})},
