--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,52 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2023-07-21 07:30:28 -0400
+%% Created for Pete Su at 2023-07-21 07:48:10 -0400 
 
 
-%% Saved with string encoding Unicode (UTF-8)
+%% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@book{bergstrom2006cosmology,
+	author = {Bergstr{\"o}m, Lars and Goobar, Ariel},
+	date-added = {2023-07-21 07:48:03 -0400},
+	date-modified = {2023-07-21 07:48:03 -0400},
+	publisher = {Springer Science \& Business Media},
+	title = {Cosmology and particle astrophysics},
+	year = {2006}}
+
+@book{Binney2013,
+	author = {Binney, James and Skinner, David},
+	date-added = {2023-07-21 07:47:03 -0400},
+	date-modified = {2023-07-21 07:47:11 -0400},
+	publisher = {Oxford University Press},
+	title = {The physics of quantum mechanics},
+	year = {2013}}
+
+@book{Binney2016astrophysics,
+	author = {Binney, James},
+	date-added = {2023-07-21 07:46:32 -0400},
+	date-modified = {2023-07-21 07:46:40 -0400},
+	publisher = {Oxford University Press},
+	title = {Astrophysics: a very short introduction},
+	year = {2016}}
+
+@book{Appenzeller2012,
+	author = {Appenzeller, Immo},
+	date-added = {2023-07-21 07:45:44 -0400},
+	date-modified = {2023-07-21 07:45:55 -0400},
+	publisher = {Cambridge University Press},
+	title = {Introduction to astronomical spectroscopy},
+	year = {2012}}
+
+@book{welz2008atomic,
+	author = {Welz, Bernhard and Sperling, Michael},
+	date-added = {2023-07-21 07:35:10 -0400},
+	date-modified = {2023-07-21 07:35:10 -0400},
+	publisher = {John Wiley \& Sons},
+	title = {Atomic absorption spectrometry},
+	year = {2008}}
 
 @book{DeAngelis2018,
 	author = {Alessandro De Angelis and M{\'{a}}rio Pimenta},
