--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,25 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2023-07-21 07:48:10 -0400 
+%% Created for Pete Su at 2023-07-21 08:03:09 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{bouman2018reconstructing,
+	author = {Bouman, Katherine L and Johnson, Michael D and Dalca, Adrian V and Chael, Andrew A and Roelofs, Freek and Doeleman, Sheperd S and Freeman, William T},
+	date-added = {2023-07-21 08:02:41 -0400},
+	date-modified = {2023-07-21 08:03:09 -0400},
+	journal = {IEEE Transactions on Computational Imaging},
+	note = {\href{https://arxiv.org/abs/1711.01357}{arxiv:1711.01357}},
+	number = {4},
+	pages = {512--527},
+	publisher = {IEEE},
+	title = {Reconstructing video of time-varying sources from radio interferometric measurements},
+	volume = {4},
+	year = {2018}}
 
 @book{bergstrom2006cosmology,
 	author = {Bergstr{\"o}m, Lars and Goobar, Ariel},
