--- a/all-bib.tex
+++ b/all-bib.tex
@@ -1,7 +1,8 @@
-\documentclass[letterpaper]{article}
+\documentclass[letterpaper,12pt]{article}
 \usepackage{url}
 \pagestyle{empty}
-\usepackage[noBBpl,sc]{mathpazo}
+%\usepackage[noBBpl,sc]{mathpazo}
+\usepackage{imfellEnglish}
 \usepackage[papersize={6.6in, 10.0in}, left=.5in, right=.5in, top=.6in, bottom=.9in]{geometry}
 \linespread{1.05}
 \sloppy
