--- a/bib.bib
+++ b/bib.bib
@@ -1,18 +1,105 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2023-07-21 08:03:09 -0400 
+%% Created for Pete Su at 2023-07-21 14:34:49 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
 
+@book{Adler2004quantum,
+	author = {Adler, Stephen L},
+	date-added = {2023-07-21 14:34:44 -0400},
+	date-modified = {2023-07-21 14:34:49 -0400},
+	publisher = {Cambridge University Press},
+	title = {Quantum theory as an emergent phenomenon: The statistical mechanics of matrix models as the precursor of quantum field theory},
+	year = {2004}}
+
+@article{Adams1994,
+	author = {C.S Adams and M Sigel and J Mlynek},
+	date-added = {2023-07-21 14:34:13 -0400},
+	date-modified = {2023-07-21 14:34:13 -0400},
+	doi = {https://doi.org/10.1016/0370-1573(94)90066-3},
+	issn = {0370-1573},
+	journal = {Physics Reports},
+	number = {3},
+	pages = {143-210},
+	title = {Atom optics},
+	url = {https://www.sciencedirect.com/science/article/pii/0370157394900663},
+	volume = {240},
+	year = {1994},
+	bdsk-url-1 = {https://www.sciencedirect.com/science/article/pii/0370157394900663},
+	bdsk-url-2 = {https://doi.org/10.1016/0370-1573(94)90066-3}}
+
+@article{Ackerhalt1973radiation,
+	author = {Ackerhalt, Jay R and Knight, Peter L and Eberly, Joseph H},
+	date-added = {2023-07-21 14:32:57 -0400},
+	date-modified = {2023-07-21 14:33:08 -0400},
+	journal = {Physical Review Letters},
+	number = {10},
+	pages = {456},
+	publisher = {APS},
+	title = {Radiation reaction and radiative frequency shifts},
+	volume = {30},
+	year = {1973}}
+
+@book{aaronson2013quantum,
+	author = {Aaronson, Scott},
+	date-added = {2023-07-21 14:32:20 -0400},
+	date-modified = {2023-07-21 14:32:20 -0400},
+	publisher = {Cambridge University Press},
+	title = {Quantum computing since Democritus},
+	year = {2013}}
+
+@article{Aaronson2004,
+	author = {Scott Aaronson},
+	date-added = {2023-07-21 14:31:13 -0400},
+	date-modified = {2023-07-21 14:31:59 -0400},
+	journal = {arXiv preprint},
+	note = {\href{https://arxiv.org/abs/quant-ph/0401062}{arxiv:quant-ph/0401062}},
+	title = {Is Quantum Mechanics An Island in Theoryspace},
+	year = {2004}}
+
+@book{Schroeck2013quantum,
+	author = {Schroeck Jr, Franklin E},
+	date-added = {2023-07-21 14:27:30 -0400},
+	date-modified = {2023-07-21 14:27:34 -0400},
+	publisher = {Springer Science \& Business Media},
+	title = {Quantum mechanics on phase space},
+	volume = {74},
+	year = {2013}}
+
+@book{Shankar2012principles,
+	author = {Shankar, Ramamurti},
+	date-added = {2023-07-21 14:26:26 -0400},
+	date-modified = {2023-07-21 14:27:40 -0400},
+	publisher = {Springer Science \& Business Media},
+	title = {Principles of quantum mechanics},
+	year = {2012}}
+
+@book{Varshalovich1988,
+	author = {Varshalovich, D. A. and Moskalev, A. N. and Khersonskii, V. K.},
+	date-added = {2023-07-21 14:22:33 -0400},
+	date-modified = {2023-07-21 14:24:19 -0400},
+	publisher = {World Scientific},
+	title = {Quantum theory of angular momentum},
+	year = {1988}}
+
+@book{tHooft2016,
+	author = {t Hooft, Gerard},
+	date-added = {2023-07-21 14:11:59 -0400},
+	date-modified = {2023-07-21 14:12:11 -0400},
+	publisher = {Springer Nature},
+	title = {The cellular automaton interpretation of quantum mechanics},
+	year = {2016}}
+
 @article{bouman2018reconstructing,
 	author = {Bouman, Katherine L and Johnson, Michael D and Dalca, Adrian V and Chael, Andrew A and Roelofs, Freek and Doeleman, Sheperd S and Freeman, William T},
 	date-added = {2023-07-21 08:02:41 -0400},
-	date-modified = {2023-07-21 08:03:09 -0400},
+	date-modified = {2023-07-21 08:04:03 -0400},
 	journal = {IEEE Transactions on Computational Imaging},
+	keywords = {black holes},
 	note = {\href{https://arxiv.org/abs/1711.01357}{arxiv:1711.01357}},
 	number = {4},
 	pages = {512--527},
@@ -191,10 +278,10 @@
 	volume = {21},
 	year = {1975}}
 
-@book{spivak2014category,
+@book{Spivak2014category,
 	author = {Spivak, David I},
 	date-added = {2023-07-20 07:06:23 -0400},
-	date-modified = {2023-07-20 07:06:23 -0400},
+	date-modified = {2023-07-21 14:27:50 -0400},
 	publisher = {MIT press},
 	title = {Category theory for the sciences},
 	year = {2014}}
@@ -1535,12 +1622,12 @@
 	year = {2006},
 	bdsk-url-1 = {https://doi.org/10.1103/PhysRevD.74.106005}}
 
-@inproceedings{Hooft:2019nmf,
+@inproceedings{tHooft:2019nmf,
 	archiveprefix = {arXiv},
 	author = {Hooft, Gerard t.},
 	booktitle = {{56th International School of Subnuclear Physics: From gravitational waves to QED, QFD and QCD (ISSP 2018) Erice, Italy, June 14-23, 2018}},
 	date-added = {2019-12-02 07:32:45 -0500},
-	date-modified = {2019-12-02 07:32:45 -0500},
+	date-modified = {2023-07-21 14:12:32 -0400},
 	eprint = {1902.10469},
 	primaryclass = {gr-qc},
 	slaccitation = {%%CITATION = ARXIV:1902.10469;%%},
@@ -1597,16 +1684,15 @@
 	year = {1994},
 	bdsk-url-1 = {https://doi.org/10.1088/0264-9381/11/3/014}}
 
-@article{Hooft1974,
-	abstract = {A gauge theory with colour gauge group U(N) and quarks having a colour index running from one to N is considered in the limit N → ∞, g2N fixed. It is shown that only planar diagrams with the quarks at the edges dominate; the topological structure of the perturbation series in 1/N is identical to that of the dual models, such that the number 1/N corresponds to the dual coupling constant. For hadrons N is probably equal to three. A mathematical framework is proposed to link these concepts of planar diagrams with the functional integrals of Gervais, Sakita and Mandelstam for the dual string.},
+@article{tHooft1974,
 	author = {G.'t Hooft},
 	date-added = {2019-11-28 09:38:12 -0500},
-	date-modified = {2019-11-28 09:38:55 -0500},
+	date-modified = {2023-07-21 14:21:12 -0400},
 	doi = {https://doi.org/10.1016/0550-3213(74)90154-0},
 	issn = {0550-3213},
 	journal = {Nuclear Physics B},
 	number = {3},
-	pages = {461 - 473},
+	pages = {461--473},
 	title = {A planar diagram theory for strong interactions},
 	url = {http://www.sciencedirect.com/science/article/pii/0550321374901540},
 	volume = {72},
@@ -2145,10 +2231,10 @@
 	title = {Topology via higher-order intuitionistic logic},
 	year = {2004 (2010)}}
 
-@article{shulman2017,
+@article{Shulman2017,
 	author = {Shulman, Michael},
 	date-added = {2019-09-04 07:22:38 -0400},
-	date-modified = {2019-09-04 07:23:30 -0400},
+	date-modified = {2023-07-21 14:27:44 -0400},
 	journal = {arXiv preprint},
 	note = {\href{https://arxiv.org/abs/1703.03007}{arxiv:1703.03007}},
 	title = {Homotopy type theory: the logic of space},
