--- a/all-bib.tex
+++ b/all-bib.tex
@@ -1,8 +1,7 @@
 \documentclass[letterpaper,12pt]{article}
 \usepackage{url}
 \pagestyle{empty}
-%\usepackage[noBBpl,sc]{mathpazo}
-\usepackage{imfellEnglish}
+\usepackage[noBBpl,sc]{mathpazo}
 \usepackage[papersize={6.6in, 10.0in}, left=.5in, right=.5in, top=.6in, bottom=.9in]{geometry}
 \linespread{1.05}
 \sloppy
